--- a/content_stylesheet.css
+++ b/content_stylesheet.css
@@ -1,8 +1,31 @@
+#middle_panel, #tree_panel, #right_panel, #toolbar_panel {
+  top: 60px !important;
+}
+
 #zeisshack-bar {
-  width: 50%;
-  right: 150px;
-  bottom: 150px;
-  background-color: green;
+  width: 100%;
+  height: 60px;
+  top: 0;
+  left: 0;
+  background: linear-gradient(to bottom, rgba(73,80,99,1) 0%, rgba(46,53,72,1) 100%);
   position: fixed;
   z-index: 1000;
+}
+
+#zeisshack-bar:before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 4px;
+  background-color: rgba(0,0,0,0.5);
+}
+
+#openscope-logo {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  width: 200px;
+  height: 36px;
 }
