--- a/content_stylesheet.css
+++ b/content_stylesheet.css
@@ -132,5 +132,151 @@
   bottom: 0;
   right: 0;
   z-index: 999;
-  background-color: rgba(255,0,0,.4);
+  border: 2px solid rgba(255,0,0,.4);
+}
+
+#popup {
+  position: absolute;
+  width: 400px;
+  top: 200px;
+  left: 200px;
+  background-color: #454d62;
+  z-index: 1000;
+  text-shadow: none;
+  border-radius: 6px;
+  box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.75);
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  opacity: 0;
+  pointer-events: none;
+}
+
+#popup.active {
+  opacity: 1;
+  pointer-events: all;
+}
+
+#popup .officebar {
+  height: 30px;
+  width: 100%;
+  background-color: #e24100;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+#popup .officebar img {
+  height: 24px;
+  margin-right: 10px;
+}
+
+#popup .body {
+  padding: 10px;
+}
+
+#popup .body .collaborator {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+#popup .collaborator .avatar {
+  width: 40px;
+  height: 40px;
+  border-radius: 20px;
+  margin-right: 10px;
+  overflow: hidden;
+}
+
+#popup .collaborator .avatar img {
+  width: 100%;
+  height: 100%;
+}
+
+#popup textarea {
+  width: 100%;
+  max-width: 100%;
+  height: 80px;
+  border-radius: 3px;
+  margin-bottom: 6px;
+  box-sizing: border-box;
+  padding: 8px;
+}
+
+#popup .submit {
+  width: 100%;
+  height: 36px;
+  display: flex;
+  justify-content: flex-end;
+}
+
+#submit-button {
+  height: 36px;
+  line-height: 36px;
+  padding: 0 16px;
+  background-color: #00FFDD;
+  border-radius: 4px;
+  color: #005A4E;
+  font-size: 13px;
+  text-shadow: none;
+  cursor: pointer;
+}
+
+#pin {
+  height: 50px;
+  width: 50px;
+  background: red;
+  position: absolute;
+  margin-left: -25px;
+  margin-top: -25px;
+  opacity: 0;
+  transition: all 0.4s cubic-bezier(0.3, 0.84, 0.44, 1);
+  transform: scale(1.3);
+  z-index: 1000;
+}
+
+#pin .avatar {
+  width: 50px;
+  height: 50px;position: relative;
+}
+
+#pin .avatar:before {
+  content: "";
+  position: absolute;
+  top: -4px;
+  left: -4px;
+  width: 56px;
+  height: 56px;
+  border-radius: 28px;
+  border: 1px solid #00FFDD;
+}
+
+#pin .avatar img {
+  width: 100%;
+  height: 100%;
+  border-radius: 25px;
+}
+
+#pin.active {
+  opacity: 1;
+  transform: scale(1);
+}
+
+#pin-comment {
+  position: absolute;
+  left: 70px;
+  background-color: #FFF;
+  border-radius: 3px;
+  width: 240px;
+  color: #000;
+  padding: 10px;
+  text-shadow: none;
+  font-size: 13px;
+  opacity: 0;
+  transition: opacity 0.4s cubic-bezier(0.3, 0.84, 0.44, 1);
+}
+
+#pin:hover > #pin-comment {
+  opacity: 1;
 }
